# RAs_python

./: .gitignore  README.MD  TDE01.ipynb  TDE02_Modelagem.ipynb  poggers  python.py  vBUGS
Data_Security/Lecture_poetry/: main.py  pyproject.toml
Data_Security/Lecture_poetry/Cripto/: AES.py  ChaCha.py
Data_Security/classes/: Julius_Caeser.py  aula1.py  aula2.py  freq_analysis.py
Data_Security/methods/: ORD.py
Performance_SC/Class_01/: PI_calculation.py  TimeToRunProgram.py
Performance_SC/Lecture_02/: Architecture.py
Performance_SC/Lecture_02/simpleCPU/: main.py
Performance_SC/Lecture_02/simpleCPU/emulator/: cpu.py  ram.py
VendingMachine/: Rubricas.md  VendingMachine.py  dummy  items.py  main.py  postgres.py  vending_machine_app.py
VendingMachine/classes/: __init__.py  estoque.py  items.py  produtos.json
classes/: estoque.py  items.py  produtos.json
jokenpo_v2/: main.py
jokenpo_v2/functions/: __init__.py  calculate_results.py  show_cat.py
jyakenpon/: dummy.txt  jane_done.py  jyakenpo.py  rps.py  rps2.py  teste.py
jyakenpon/testes/: poggers
