[project]
name = "lessons-is"
version = "1.0.0"
description = "Something really cool"
authors = [
    {name = "dudu do firefox"}
]
license = {text = "none"}
requires-python = ">=3.14"
dependencies = [
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "cryptography (>=46.0.6,<47.0.0)",
    "flake8 (==7.1.1)",
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
